2021-05-04  Karl Berry  <karl@freefriends.org>

	* Makefile (cro-preserve): better name for cro target,
	since it seems usually we can use cro-scratch.

	* capcrossref.pl (crossref_create_landing_page): keep entities
	in the <title> string, but remove markup.

2021-05-03  Karl Berry  <karl@freefriends.org>

	* capcrossref.pl (crossref_create_landing_page): don't
	output "Summary:" label if there's no text.

2021-05-02  Karl Berry  <karl@freefriends.org>

	* capcrossref.pl (crossref_create_landing_page): no need to
	pass $issue_ref any more, since capsules contain pointers.
	Also, for the <title> string, run xlate_html2txt and remove html
	markup.

	* lists-translations.txt (\MFB): needs third argument for txt.

	* capaccum-author.pl,
	* capdata-xlate.pl,
	* cr-do-issue: doc.

2021-05-01  Karl Berry  <karl@tug.org>

	* tb06capsule.txt (TeX82 memory structure): %person|Donald Knuth

2021-05-01  Karl Berry  <karl@freefriends.org>

	* lists-regexps.txt (\cs): use &#x5c; instead of \ for sake
	of being able to search for literal \ chars.
	(\tbsurl): handle.
	* capaccum.pl (accumulation): also remove hex entities.
	
	* lists-translations.txt (\MFB): handle first, then \MF;
	too many other cases. Use lowercase hex consistently.
	* lists-unifications.txt (\TUGboat&#xa0;Editors): recognize
	<i>TUGboat</i>.

	* capin.pl (read_issue): new back pointer "issueref" in capsule hash
	(and new todo to move !TBIDENT! translation in a better place).
	* captab (init): new non-option global "crossref-first-issue".
	* capout.pl (write_issue),
	* capcrossref.pl (doi_of_capsule): use it.
	* Makefile: doc.
	* cr-do-issue: doc.

	* capdata-rx.pl (@lhs): no need for verbose identifier lhs_exprs.
	
2021-04-26  Karl Berry  <karl@freefriends.org>

	* Makefile (testiss, crossref_iss): start work on tb130.
	(cro-scratch): new target to use before any hand-editing.
	(cr_verbose): new variable for --verbose.
	(cr_args): use it.
	(crw): generalize tbVV-N pattern.
